--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -29,3 +29,14 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+  make zip:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: montudor/action-zip@v0.1.0
+        with:
+          args: zip -qq -r ./mod.zip ./
+      - uses: actions/upload-artifact@master
+        with:
+          name: mod
+          path: ./mod.zip
