--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-  make zip:
+  make_zip:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
