--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,31 +11,13 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  test:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
   make_zip:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: montudor/action-zip@v0.1.0
         with:
-          args: zip -qq -r ./mod.zip ./
+          args: zip -qq -r ./mod.zip ./Harvest-Craft-PE
       - uses: actions/upload-artifact@master
         with:
           name: mod
