changed some params

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       - uses: actions/checkout@v1
       - uses: montudor/action-zip@v0.1.0
         with:
-          args: zip -qq -r ./mod.zip ./Harvest-Craft-PE
+          args: zip -qq -r Harvest-Craft-PE.zip Harvest-Craft-PE
       - uses: actions/upload-artifact@master
         with:
-          name: mod
-          path: ./mod.zip
+          name: modfile
+          path: Harvest-Craft-PE.zip
